@@ -2,8 +2,9 @@
 #
 # Win32::API - Perl Win32 API Import Facility
 # ^^^^^^^^^^
-# Version: 0.49 (20 Feb 2008)
 # by Aldo Calpini <dada@perl.it>
+#
+# Version: 0.50 (23 Feb 2008)
 #
 # Current maintainer:
 # Cosimo Streppone <cosimo@cpan.org>
@@ -12,18 +13,21 @@
 
 With this module you can import and call arbitrary functions
 from Win32's Dynamic Link Libraries (DLL), without having
-to write an XS extension. Note, however, that this module 
-can't do anything: parameters input and output is limited 
-to simpler cases. In particular, when you play 
-hard with pointers and arrays and memory locations, there 
-are some things that you just can't do.
+to write an XS extension.
+
+Note, however, that this module can't really do everything:
+parameters input and output is limited to simpler cases.
+In particular, when you play hard with pointers and arrays
+and memory locations, there are some things that you just
+can't do.
 
 The current version of Win32::API is available at:
 
   http://search.cpan.org/dist/Win32-API/
 
-A short example of how you can use this module (it just gets the PID of 
-the current process, eg. same as Perl's internal $$):
+Here it is a short example of how you can use this module.
+It just gets the PID of the current process, eg. same as Perl's
+internal $$:
 
   use Win32::API;
   Win32::API->Import("kernel32", "int GetCurrentProcessId()");
